# legartis

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json
.claude/agents/: build-validator.md  dry-reviewer.md  solid-reviewer.md  test-quality-reviewer.md
.claude/commands/: full-review.md  red-green.md
.claude/hooks/: phrase-router.sh  session-menu.sh
.claude/skills/full-review/: SKILL.md
.claude/skills/red-green/: SKILL.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 15b40afa9006_create_documents_sentences_labels.py  a1b2c3d4e5f6_add_clause_types_table.py  b2c3d4e5f6a7_labels_use_clause_type_fk.py
backend/app/: clause_types.py  config.py  db.py  deps.py  main.py  models.py  schemas.py  segmentation.py  slugify.py
backend/app/routers/: clause_types.py  documents.py  labels.py
backend/tests/: conftest.py  test_clause_types.py  test_dashboard.py  test_documents_get.py  test_documents_upload.py  test_labels.py  test_segmentation.py
docs/: ai-features.md  api.md  architecture.md  features.md
docs/adr/: 0001-dynamic-clause-types.md
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.e2e.json
frontend/e2e/: dashboard.spec.ts  label.spec.ts  upload.spec.ts
frontend/e2e/fixtures/: sample.txt
frontend/src/: index.html
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.ts
frontend/src/app/core/: api.service.spec.ts  api.service.ts  clause-type-color.pipe.ts  (+2 more)
(+18 files in other folders)
